# HRP

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .coverage 10  .coverage 11  .coverage 12  .coverage 2  .coverage 3  .coverage 4  .coverage 5  .coverage 6  .coverage 7  .coverage 8  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MANUAL_VERIFICATION_DASHBOARD.md  README.md  SPLIT_VERIFICATION_RESULTS.md  SUBTASK_5-3_COMPLETE.md  UNIVERSE_SCHEDULING_IMPLEMENTATION.md  backfill_progress_20260124.json  coverage.json  features.db  features.db-shm  features.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt  run_report_generator.py  run_report_no_deps.py  run_scheduler.py  subtask-3-4-verification-summary.md  test_feature_storage.py  test_results.txt  verify_mlflow_feature_versions.py  verify_split_adjustment.py
.claude/agents/: functionality-discovery-e2e-tester.md
docs/: cookbook.md
docs/agents/: 01-signal-scientist-agent.md  02-alpha-researcher-agent.md  03-code-materializer-agent.md  03-ml-scientist-agent.md  06-quant-developer-agent.md  07-validation-analyst-agent.md  09-cio-agent.md  09-risk-manager-agent.md  11-report-generator-agent.md  2026-01-25-research-agents-design.md  2026-01-25-research-agents-operations.md  2026-01-26-validation-analyst-agent.md  2026-01-27-cio-agent.md  2026-01-29-pipeline-orchestrator-agent.md  agent-interaction-diagram.md  decision-pipeline.md  state-machine-transitions.md
docs/architecture/: TASK-017-design.md  data-pipeline-diagram.md
docs/designs/: TASK-006-var-cvar-design.md  TASK-007-realtime-data-ingestion.md  TASK-008-performance-attribution-design.md  TASK-010-robinhood-order-execution-engine.md  TASK-017-Phase5-Optimization-UI.md  TASK-017-tier1-quick-wins.md
docs/operations/: alert-thresholds.md  backup-restore.md  cookbook.md  data-backfill.md  deployment.md  head-start.md  ibkr-setup-guide.md  monitoring-universe-scheduling.md  ops-server.md  sample-risk-assessment.md  tier4-trading-setup.md  var-risk-metrics.md
docs/plans/: 2025-01-19-hrp-spec.md  2025-01-22-enhanced-data-health-implementation.md  2025-01-22-enhanced-data-health-page-design.md  2025-01-22-ml-framework-mvp.md  2025-01-22-overfitting-guards-COMPLETE.md  2025-01-22-overfitting-guards-plan.md  2025-01-22-platform-api-test-suite-design.md  2025-01-22-platform-api-test-suite.md  2025-01-22-v1-completion-plan.md  2025-01-22-walk-forward-validation-design.md  2025-01-25-vectorbt-pro-patterns.md  2026-01-19-hrp-spec.md  2026-01-24-remaining-features.md  2026-01-25-research-agents-design.md  2026-01-25-research-agents-operations.md  2026-01-26-alpha-researcher-agent.md  2026-01-26-cio-agent-design.md  2026-01-26-execution-roadmap.md  2026-01-26-f020-implementation-plan.md  2026-01-26-ml-quality-sentinel-agent.md  2026-01-26-report-generator-implementation.md  2026-01-26-validation-analyst-agent.md  2026-01-28-quant-developer-implementation.md  2026-01-29-agent-documentation-update.md  2026-01-29-agent-redesign-feedback-implementation.md  2026-01-29-agent-redesign-feedback.md  2026-01-29-agents-monitor-design.md  2026-01-30-activate-dormant-features.md  2026-01-30-add-nlp-and-bayesian-opimization.md  2026-02-02-decision-pipeline-audit.md  2026-02-03-pipeline-progress-dashboard-design.md  2026-02-04-bayesian-optimization-design.md  2026-02-04-bayesian-optimization-impl.md  2026-02-04-tier3-phase2-ops.md  2026-02-08-tier4-trading-execution.md  2026-02-19-recommendation-service-implementation-plan.md  2026-02-19-strategic-analysis-autonomous-recommendations.md  Project-Status-Rodmap.md  Project-Status.md  Roadmap.md  (+1 more)
docs/reports/: 2026-01-22-v1-completion-plan.md  2026-01-22-walk-forward-validation-COMPLETE.md  2026-01-22-walk-forward-validation-plan.md  2026-01-24-documentation-update-final-summary.md  2026-01-24-documentation-update-summary.md  2026-01-24-phase1-completion-summary.md  (+16 more)
hrp/: __init__.py  exceptions.py
launchd/: com.hrp.agent-pipeline.plist  com.hrp.backup.plist  com.hrp.cio-review.plist  com.hrp.daily-report.plist  com.hrp.features.plist  com.hrp.fundamentals.plist  com.hrp.ops-server.plist  com.hrp.prices.plist  com.hrp.quality-monitoring.plist  com.hrp.quality-sentinel.plist  com.hrp.sec-ingestion.plist  com.hrp.signal-scan.plist  com.hrp.universe.plist  com.hrp.weekly-report.plist
plans/: fix-log-errors-2026-02-13.md
scripts/: load_full_universe.py  load_universe_polygon.py  manage_launchd.sh  remove_duplicates.py  setup.sh  startup.sh
tests/: conftest.py  test_exceptions.py
(+388 files in other folders)
